Fixed spacing issues with headers

--- a/css/style.css
+++ b/css/style.css
@@ -45,13 +45,18 @@ p {
   }
 }
 
-.icon-block {
-  padding: 0 15px;
-}
 .icon-block .material-icons {
   font-size: inherit;
 }
 
 footer.page-footer {
   margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6{
+    margin: 0px 0px 0px 0px;
+}
+
+.margin {
+    margin: 0 0 1rem 0;
 }
